--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body, html {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
   #game-container {
@@ -12,17 +13,61 @@ body, html {
   }
   
   
-  #gameCanvas {
+  @keyframes moveBackground {
+    0% {
+        background-position: 50% 50%;
+    }
+    25% {
+        background-position: 51% 49%;
+    }
+    50% {
+        background-position: 49% 51%;
+    }
+    75% {
+        background-position: 50% 50%;
+    }
+    100% {
+        background-position: 50% 50%;
+    }
+}
+
+.color-container p:nth-of-type(1){
+  /* color: red; */
+  color: rgb(255, 0, 89);
+
+}
+.color-container p:nth-of-type(2){
+  color: blue;
+  color: rgb(0, 187, 255);
+}
+.color-container p:nth-of-type(3){
+  color: green;
+  color: rgb(168, 242, 19);
+
+}
+.color-container p:nth-of-type(4){
+  color: gold;
+}
+
+#gameCanvas {
     width: 100%;
     height: 100%;
-    background-color: black;
-  }
+
+    background-image: linear-gradient(
+  40deg,
+  hsl(240deg 82% 9%) 0%,
+  hsl(195, 89%, 26%) 100%
+);
+    background-size: 200%;
+    animation: moveBackground 10s infinite linear;
+}
+
   
   .color-container {
     display: flex;
     justify-content: center;
     gap:10px;
-    background-color: black;
+    background: rgb(4, 4, 42);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
   }
